--- a/templates/index.html
+++ b/templates/index.html
@@ -261,10 +261,6 @@ Indolingo Home
 
 </section>
 
-<footer>
-    <p class="text-center">Copyright &copy IndoLingo</p>
-</footer>
-
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -313,3 +309,9 @@ Indolingo Home
     </script>
 
     {% endblock %}
+
+{% block footer%}
+<footer>
+    <p class="text-center">Copyright &copy IndoLingo</p>
+</footer>
+{%endblock%}
