--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
     {% include '/includes/_navbar.html'%}
     <div class="container" style="margin-top:100px">
       {% block body %}{% endblock %}
+      {%block footer%}{%endblock%}
     </div>
   </body>
 </html>
