--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,20 +1,15 @@
 {% extends 'layoutAfterLogin.html' %}
 
 {% block title %}
-My Courses
+Thank you
 {% endblock %}
 
 
 {% block head %}
-
-{% endblock %}
-
-
-{% block body %}
-
 {% endblock %}
 
 {% block footer%}
+<br><hr>
 <footer>
     <p class="text-center">Copyright &copy IndoLingo</p>
 </footer>
