--- a/templates/includes/_navbarAfterLogin.html
+++ b/templates/includes/_navbarAfterLogin.html
@@ -9,17 +9,34 @@
       </button>
       <ul class="nav navbar-nav navbar-left">
         <li><a href="/" style="color:white; font-size:25px; font-family: 'Love Ya Like A Sister', cursive;"><span class="glyphicon glyphicon-education"></span><strong>IndoLingo</strong></a></li>
-        <li><a href="/mycourses" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>My Courses</strong></a></li>
-        <li><a href="/flashcards" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>Flashcards</strong></a></li>
-        <li><a href="/translate" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>Translate</strong></a></li>
-        <li><a href="/search" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>Search</strong></a></li>
+        <li><a href="/" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"><strong>My Courses</strong></a></li>
+        <li><a href="/flashcards" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"><strong>Flashcards</strong></a></li>
+        <li><a href="/translate" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"><strong>Translate</strong></a></li>
+        <li><a href="/search" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"><strong>Search</strong></a></li>
 
       </ul>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/SLang" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>Site Language</strong></a></li>
-        <li><a href="/Profile" style="color:white; margin-top:5px; font-size:15px; font-family: 'Indie Flower', cursive;"><strong>My Profile</strong></a></li>
+        <li class="dropdown">
+              <a href="/SLang" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>Site Language</strong></a>
+              <div class="dropdown-content">
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/tamil"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> தமிழ்</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/hindi"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> हिंदी</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/sanskrit"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> संस्कृतम्</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/bangla"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> বাংলা</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/odia"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> ଓଡ଼ିଆ</a>
+                <a class="flag flag-svg-micro flag-in" style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/punjabi"><img style="height:20px; width:20px; border-radius:10px" src="{{url_for('static', filename='in.svg')}}" alt="India"> ਪੰਜਾਬੀ</a>
+              </div>
+        </li>
+        <li class="dropdown">
+              <a href="/Profile" style="color:white; margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;"  class="dropbtn"><strong>My Profile</strong></a>
+              <div class="dropdown-content">
+                <a style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/settings">Settings</a>
+                <a style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/help">Help</a>
+                <a style="margin-top:5px; font-size:20px; font-family: 'Indie Flower', cursive;" href="/logout">Logout</a>
+              </div>
+        </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
