--- a/templates/layoutHomePage.html
+++ b/templates/layoutHomePage.html
@@ -13,6 +13,7 @@
     {% include '/includes/_navbar.html'%}
     <div class="container" style="margin-top:100px">
       {% block body %}{% endblock %}
+      {%block footer%}{%endblock%}
     </div>
   </body>
 </html>
